added shadcn, nanostore, theme store

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,14 @@
   "compilerOptions": {
     "strictNullChecks": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "preact"
+    "jsxImportSource": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   }
+
+  
 }
