--- a/package.json
+++ b/package.json
@@ -12,14 +12,27 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/mdx": "^2.0.3",
-    "@astrojs/preact": "^3.1.0",
+    "@astrojs/react": "^4.1.2",
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.4",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/tailwind": "^5.1.4",
+    "@nanostores/persistent": "^0.10.2",
+    "@nanostores/react": "^0.8.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@types/react": "^19.0.3",
+    "@types/react-dom": "^19.0.2",
     "astro": "^4.1.1",
-    "lucide-preact": "^0.307.0",
-    "preact": "^10.19.3",
-    "tailwindcss": "^3.4.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.16.0",
+    "lucide-react": "^0.469.0",
+    "nanostores": "^0.11.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
   }
 }
